--- a/stretch-assignment/digital_timer/index.html
+++ b/stretch-assignment/digital_timer/index.html
@@ -13,6 +13,6 @@
       <div class="digit" id="msHundreds">-</div>
       <div class="digit" id="msTens">-</div>
     </div>
-    <button>START</button> <button>RESET</button>
+    <button class="start">START</button> <button>RESET</button>
   </body>
 </html>
